--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>I Love Ore — Memories</title>
   <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@8..144,600&family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="images/I Love Ore Logo.png" type="image/png">
 </head>
 <body>
   <button id="theme-toggle" class="theme-toggle">🌙</button>
